# squiz-box

./: .gitignore  ReadMe.md  TODO.txt  dscanner.ini  dub.json  meson.build  meson_options.txt  win_env_vs.bat
.github/dub_test/: .gitignore  dub.json  main.d
.github/test_dub/: .gitignore  dub.json
.github/workflows/: ci.yml
doc/: APPNOTE.TXT
doc/xz/: 01_compress_easy.c
examples/: box_upload.d  download_unbox.d
src/squiz_box/: bz2.d  core.d  gz.d  package.d  priv.d  squiz.d  tar.d  util.d  xz.d  zip.d
src/squiz_box/box/: package.d  tar.d  z7.d  zip.d
src/squiz_box/box/seven_z/: error.d  header.d  package.d  read.d  utils.d  write.d
src/squiz_box/c/: bzip2.d  lzma.d  zlib.d  zstd.d
src/xz/: lzma.d
subprojects/: .gitignore
test/: archive.d  compress.d  main.d  tar.d  util.d
test/data/: archive.7z  archive.tar  archive.tar.bz2  archive.tar.xz  file 2.txt
test/data/folder/: chmod 666.txt
tools/: stupid.d.in  stupid_gen.d
windows-x64/: bz2.lib  lzma.lib  zstd.lib
